@@ -356,7 +356,7 @@ public class PurchaseViewModel extends BaseViewModel {
         } else {
             formData.getBarcodeLive().setValue(barcode);
             formData.isFormValid();
-            if(isQuickModeEnabled()) sendEvent(Event.FOCUS_INVALID_VIEWS);
+            sendEvent(Event.FOCUS_INVALID_VIEWS);
         }
     }
 
